--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 	<body>
 			 <div class="box">
 				 <img src="logo.png" class="user">
-				 <h2><u> Login Account </u> </h2>
+				 <h2><u> Login Account and gmail account </u> </h2>
 				 <form>
 				 	<p>Email:<br/></p>
 				 	<input type="text" Placeholder="Enter Your Email" required=""><br/>
